# vintage-house-reborn

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 104b8bb8cf88_add_orders_order_items_payments_tables.py  87af8e11070c_add_is_admin_to_users.py  a3cc81d87994_add_products_product_images_tables_and_.py  ba1ab04a2376_add_users_and_refresh_tokens_tables.py  e79951599d68_add_phone_number_and_address_to_users.py
app/: main.py
app/auth/: dependencies.py  models.py  redis.py  responses.py  router.py  schemas.py  service.py
app/auth/schemas/: email.py  login_logout.py  me.py  signup.py
app/auth/service/: email.py  signup.py
app/auth/services/: email.py  login_logout.py  me.py  refresh.py  signup.py
app/auth/utils/: redis.py  responses.py
app/cart/: router.py
app/cart/schemas/: add.py  read.py
app/cart/services/: add.py  add_product.py  read.py
app/cart/utils/: redis.py  responses.py
app/core/: config.py  database.py  responses.py  s3.py
app/core/utils/: email.py  pagination.py  security.py  validators.py
app/payments/: models.py
app/products/: models.py  router.py
app/products/schemas/: create.py  read.py  update.py
app/products/services/: create.py  delete.py  read.py  update.py
env/: example.env
nginx/: nginx.conf
tests/: conftest.py  utils.py
tests/test_auth/: conftest.py  test_router.py  test_schemas.py
tests/test_cart/: conftest.py
tests/test_products/: conftest.py
(+15 files in other folders)
